Change makefile for general user

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,4 +3,6 @@ tuncat_SOURCES = tuncat.c tuncat.h
 tuncat_LDFLAGS = -lsnappy
 
 install-exec-hook:
-	setcap cap_net_admin=ep $(DESTDIR)$(bindir)/tuncat
+	@if [ `id -u` -eq 0 ]; then \
+	    setcap cap_net_admin=ep $(DESTDIR)$(bindir)/tuncat ; \
+	fi
