--- a/Makefile.in
+++ b/Makefile.in
@@ -608,7 +608,9 @@ uninstall-am: uninstall-binPROGRAMS
 
 
 install-exec-hook:
-	setcap cap_net_admin=ep $(DESTDIR)$(bindir)/tuncat
+	@if [ `id -u` -eq 0 ]; then \
+	    setcap cap_net_admin=ep $(DESTDIR)$(bindir)/tuncat ; \
+	fi
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
