reorganize the project files

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 bin_PROGRAMS = tuncat
 tuncat_SOURCES = tuncat.c tuncat.h
-tuncat_LDFLAGS = -lsnappy
+tuncat_CFLAGS = @CFLAGS@ @SNAPPY_CFLAGS@
+tuncat_LDADD = @LIBS@ @SNAPPY_LIBS@
 
 install-exec-hook:
 	@if [ `id -u` -eq 0 ]; then \
