fix bugs and refactoring

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS = tuncat
 tuncat_SOURCES = tuncat.c tuncat.h
-tuncat_CFLAGS = @CFLAGS@ @SNAPPY_CFLAGS@
-tuncat_LDADD = @LIBS@ @SNAPPY_LIBS@
+tuncat_CFLAGS = @SNAPPY_CFLAGS@
+tuncat_LDADD = @SNAPPY_LIBS@
+CFLAGS = -Wall -Wextra -Werror
 
 install-exec-hook:
 	@if [ `id -u` -eq 0 ]; then \
