--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,10 +2,9 @@
     "name": "tuncat",
     "dockerFile": "Dockerfile",
     "runArgs": [
-        "-v",
-        "/var/run/docker.sock:/var/run/docker.sock",
         "--privileged",
-        "--init"
+        "--init",
+        "--user=user"
     ],
     "customizations": {
         "vscode": {
