--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,24 +9,23 @@ ENV LC_CTYPE=C.UTF-8
 RUN env \
     DEBIAN_FRONTEND=noninteractive \
     DEBCONF_NOWARNINGS=yes \
-    apt-get update \
-    && apt-get -y install --no-install-recommends \
-            apt-utils \
-            autoconf \
-            automake \
-            build-essential \
-            git \
-            iproute2 \
-            make \
-            pkg-config \
-            libcap2-bin \
-            libsnappy-dev \
-            libtool \
-            ssh \
-            sudo \
+    bash -c 'apt-get update \
+          && apt-get -y install --no-install-recommends \
+               apt-utils \
+               autoconf \
+               automake \
+               build-essential \
+               git \
+               iproute2 \
+               make \
+               pkg-config \
+               libcap2-bin \
+               libsnappy-dev \
+               libtool \
+               ssh \
+               sudo \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-          2>&1
+    && rm -rf /var/lib/apt/lists/* ' 2>&1
 
 RUN useradd -m -s /bin/bash -G sudo user; \
     echo "user ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/user; \
