--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -15,6 +15,7 @@ RUN env \
                autoconf \
                automake \
                build-essential \
+               ca-certificates \
                git \
                iproute2 \
                make \
