--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,7 +10,8 @@
         "vscode": {
             "extensions": [
                 "ms-azuretools.vscode-docker",
-                "llvm-vs-code-extensions.vscode-clangd"
+                "llvm-vs-code-extensions.vscode-clangd",
+                "ms-vscode-remote.remote-containers"
             ]
         }
     },
