--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,3 +25,7 @@ RUN  apt-get update \
   && useradd -m -s /bin/bash -G sudo user \
   && echo "user ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/user \
   && chmod 0440 /etc/sudoers.d/user
+
+COPY entrypoint.sh /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
