--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,9 +5,7 @@
         "--privileged",
         "--init",
         "--user=user",
-        "--group-add=docker",
-        "-v",
-        "/var/run/docker.sock:/var/run/docker.sock"
+        "--group-add=docker"
     ],
     "customizations": {
         "vscode": {
@@ -20,6 +18,5 @@
     },
     "features": {
         "ghcr.io/devcontainers/features/docker-in-docker:2": {}
-    },
-    "postStartCommand": "sudo chown root:docker /var/run/docker.sock; sudo chmod 660 /var/run/docker.sock"
+    }
 }
