--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -25,3 +25,5 @@ RUN  apt-get update \
   && useradd -m -s /bin/bash -G sudo user \
   && echo "user ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/user \
   && chmod 0440 /etc/sudoers.d/user
+
+USER user:user
