BIG refactoring (on going)

--- a/configure.ac
+++ b/configure.ac
@@ -3,8 +3,9 @@
 
 AC_PREREQ([2.71])
 AC_INIT([tuncat],[0.9.3],[mako10k@mk10.org])
-AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_SRCDIR([src/tuncat.c])
+AC_CONFIG_MACRO_DIR([m4])
+AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_HEADERS([config.h])
 AC_USE_SYSTEM_EXTENSIONS
 
@@ -28,6 +29,26 @@ AC_FUNC_ALLOCA
 AC_FUNC_FORK
 AC_CHECK_FUNCS([memmove memset select socket])
 
-AC_CONFIG_FILES([Makefile src/Makefile])
+DX_OUTPUT_DIR=doxygen
+
+AC_SUBST([DX_OUTPUT_DIR], [${DX_OUTPUT_DIR}])
+
+AC_CONFIG_FILES([Makefile src/Makefile docs/Makefile])
+AC_CONFIG_FILES([docs/Doxyfile])
 AC_CONFIG_FILES([tuncat.spec])
+
+
+DX_INIT_DOXYGEN([${PACKAGE_NAME}], [Doxyfile], [${DX_OUTPUT_DIR}])
+
+DX_DOXYGEN_FEATURE([ON])
+DX_DOT_FEATURE(ON)
+DX_HTML_FEATURE(ON)
+DX_CHM_FEATURE(OFF)
+DX_CHI_FEATURE(OFF)
+DX_MAN_FEATURE(OFF)
+DX_RTF_FEATURE(OFF)
+DX_XML_FEATURE(OFF)
+DX_PDF_FEATURE(OFF)
+DX_PS_FEATURE(OFF)
+
 AC_OUTPUT
