--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,9 @@
                 "ms-azuretools.vscode-docker",
                 "llvm-vs-code-extensions.vscode-clangd",
                 "ms-vscode-remote.remote-containers",
-                "ms-vscode.makefile-tools"
+                "ms-vscode.makefile-tools",
+                "ms-vscode.cpptools",
+                "ms-vscode.cpptools-extension-pack"
             ]
         }
     },
